SQUASH: Dicoding Submission Issue #2
- Penambahan layout card view yang dilengkapi dengan tombol share + favorit

- Card View layout dapat tetap menampilkan aktifitas yang di tuju, seperti pada view - view sebelumnya

--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -10,6 +10,10 @@
         android:title="@string/app_menu_2"
         app:showAsAction="never"/>
     <item
+        android:id="@+id/action_card"
+        android:title="@string/app_menu_4"
+        app:showAsAction="never" />
+    <item
         android:id="@+id/action_about"
         android:title="@string/app_menu_3"
         app:showAsAction="never"/>
